Added copy button with alert and update copy count in navbar

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
             <button class="btn btn-soft px-6 py-3 bg-[#41ff6b1a] rounded-[50px] font-black text-[16px] "><span id="btn-coin">100</span><img src="./assets/coin.png" alt="coin" class="w-6"></button>
 
-            <button class="btn btn-soft px-9 py-3 bg-[#00A63E] rounded-[50px]   text-white font-semibold text-[16px]">0 Copy</button>
+            <button class="btn btn-soft px-9 py-3 bg-[#00A63E] rounded-[50px]   text-white font-semibold text-[16px]"><span id="copy-count">0</span> Copy</button>
         </div>
         <!-- hamburger menu -->
         <div class="text-[#006747] font-bold text-2xl block lg:hidden">
@@ -80,7 +80,7 @@
                 <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-6 py-2 min-w-[50px] h-10 flex justify-center items-center mt-3 rounded-full  ">All</div>
                  </div>
                  <div class="flex gap-2 w-full" >
-                    <button class="btn hover:bg-gray-800 hover:text-white p-4 flex-1 bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
+                    <button class="copy-btn btn hover:bg-gray-800 hover:text-white p-4 flex-1 bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
                   <button class="call-btn btn hover:bg-gray-400 flex-1 p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
                  </div>
 
@@ -98,7 +98,7 @@
                    <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-6 py-2 min-w-[50px] h-10 flex justify-center items-center mt-3 rounded-full  ">Police</div>
             </div>
                <div class="flex gap-2 w-full" >
-                  <button class="btn hover:bg-gray-800 hover:text-white p-4 flex-1 bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
+                  <button class="copy-btn btn hover:bg-gray-800 hover:text-white p-4 flex-1 bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
                   <button class="call-btn btn hover:bg-gray-400  p-4 flex-1 bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
                </div>
 
@@ -116,7 +116,7 @@
                 <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-6 py-2 min-w-[50px] h-10 flex justify-center items-center mt-3 rounded-full  ">Fire</div>
                </div>
                 <div class="flex gap-2 w-full" >
-                     <button class="btn hover:bg-gray-800 hover:text-white p-4 flex-1  bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
+                     <button class="copy-btn btn hover:bg-gray-800 hover:text-white p-4 flex-1  bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
                   <button class="call-btn btn hover:bg-gray-400 flex-1  p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
 
@@ -134,7 +134,7 @@
                 <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-6 py-2 min-w-[50px] h-10 flex justify-center items-center mt-3 rounded-full  ">Health</div>
                 </div>
                  <div class="flex gap-2 w-full" >
-                    <button class="btn hover:bg-gray-800 hover:text-white p-4 flex-1 bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
+                    <button class="copy-btn btn hover:bg-gray-800 hover:text-white p-4 flex-1 bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
                   <button class="call-btn btn hover:bg-gray-400  p-4 flex-1 bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
                  </div>
 
@@ -152,7 +152,7 @@
                   <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-6 py-2 min-w-[50px] h-10 flex justify-center items-center mt-3 rounded-full  ">Help</div>
                 </div>
              <div class="flex gap-2 w-full" >
-                    <button class="btn hover:bg-gray-800 hover:text-white p-4 flex-1 bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
+                    <button class="copy-btn btn hover:bg-gray-800 hover:text-white p-4 flex-1 bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
                   <button class="call-btn btn hover:bg-gray-400  p-4 flex-1 bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
              </div>
 
@@ -170,7 +170,7 @@
                 <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-6 py-2 min-w-[50px] h-10 flex justify-center items-center mt-3 rounded-full  ">Govt.</div>
                 </div>
               <div class="flex gap-2 w-full" >
-                   <button class="btn hover:bg-gray-800 hover:text-white p-4 flex-1  bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
+                   <button class="copy-btn btn hover:bg-gray-800 hover:text-white p-4 flex-1  bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
                   <button class="call-btn btn hover:bg-gray-400 flex-1 p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
               </div>
 
@@ -188,7 +188,7 @@
                  <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-6 py-2 min-w-[50px] h-10 flex justify-center items-center mt-3 rounded-full  ">Electricity</div>
                 </div>
                 <div class="flex gap-2 w-full" >
-                     <button class="btn hover:bg-gray-800 hover:text-white p-4 flex-1 bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
+                     <button class="copy-btn btn hover:bg-gray-800 hover:text-white p-4 flex-1 bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
                   <button class="call-btn btn hover:bg-gray-400 flex-1  p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
 
@@ -206,7 +206,7 @@
                     <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-6 py-2 min-w-[50px] h-10 flex justify-center items-center mt-3 rounded-full  ">NGO</div>
               </div>
                  <div class="flex gap-2 w-full" >
-                    <button class="btn hover:bg-gray-800 hover:text-white p-4 flex-1 bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
+                    <button class="copy-btn btn hover:bg-gray-800 hover:text-white p-4 flex-1 bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
                   <button class="call-btn btn hover:bg-gray-400 flex-1 p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
                  </div>
 
@@ -224,7 +224,7 @@
                  <div class="badge hind-madurai-font  text-lg text-[#5c5c5c] mb-8 bg-[#f2f2f2] px-6 py-2 min-w-[50px] h-10 flex justify-center items-center mt-3 rounded-full  ">Travel</div>
                 </div>
                 <div class="flex gap-2 w-full" >
-                     <button class="btn hover:bg-gray-800 hover:text-white p-4 flex-1 bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
+                     <button class="copy-btn btn hover:bg-gray-800 hover:text-white p-4 flex-1 bg-white rounded-lg roboto-font  text-[#5c5c5c] text-[16px]"><i class="fa-regular fa-copy"></i> Copy</button>
                   <button class="call-btn btn hover:bg-gray-400 flex-1  p-4  bg-[#00A63E] rounded-lg roboto-font  text-white  text-[16px]"><i class="fa-solid fa-phone"></i> Call</button>
                 </div>
 
