Update navigation bar for mobile responsive

--- a/index.html
+++ b/index.html
@@ -31,25 +31,21 @@
 </head>
 <body class="min-h-[100vh]">
     <!-- navigation section starts here -->
-    <header class="inter-font flex justify-between items-center px-14 py-6">
+    <header class="inter-font flex justify-between items-center p-4 lg:px-14 lg:py-6">
         <!-- the container of logo and website name -->
         <div class="logo flex items-center" >
         <img src="./assets/logo.png" alt="website-log" class="w-12">
         <h1 class="text-[#006747] font-black ml-3 text-xl ">Emergency <br> Service</h1>
         </div>
         <!-- the container of buttons -->
-        <div class="space-x-5 hidden lg:block">
-            <button class="btn btn-soft px-6 py-3 bg-[#41ff6b1a] rounded-[50px] font-black text-[16px] "><span id="heart-count">0</span> <img id="nav-heart" src="./assets/heart.png" alt="heart" class="w-6"></button>
+        <div class="flex space-x-2 lg:space-x-5 ">
+            <button class="btn btn-soft p-3 lg:px-6 lg:py-3 bg-[#41ff6b1a] rounded-[50px] font-black text-[16px] "><span id="heart-count">0</span> <img id="nav-heart" src="./assets/heart.png" alt="heart" class="w-6"></button>
 
-            <button class="btn btn-soft px-6 py-3 bg-[#41ff6b1a] rounded-[50px] font-black text-[16px] "><span id="btn-coin">100</span><img src="./assets/coin.png" alt="coin" class="w-6"></button>
+            <button class="btn btn-soft p-3 lg:px-6 lg:py-3 bg-[#41ff6b1a] rounded-[50px] font-black text-[16px] "><span id="btn-coin">100</span><img src="./assets/coin.png" alt="coin" class="w-6"></button>
 
-            <button class="btn btn-soft px-9 py-3 bg-[#00A63E] rounded-[50px]   text-white font-semibold text-[16px]"><span id="copy-count">0</span> Copy</button>
+            <button class="btn btn-soft p-3 lg:px-9 lg:py-3 bg-[#00A63E] rounded-[50px]   text-white font-semibold text-[16px]"><span id="copy-count">0</span> Copy</button>
         </div>
-        <!-- hamburger menu -->
-        <div class="text-[#006747] font-bold text-2xl block lg:hidden">
-            <i class="fa-solid fa-bars"></i>
-        </div>
-
+       
     </header>
     <main class="bg-[#f5fff6]">
         <!-- hero banner section starts here -->
