Modify the text content for responsive

--- a/index.html
+++ b/index.html
@@ -31,29 +31,29 @@
 </head>
 <body class="min-h-[100vh]">
     <!-- navigation section starts here -->
-    <header class="inter-font flex justify-between items-center p-4 lg:px-14 lg:py-6">
+    <header class="inter-font flex justify-between items-center p-2  lg:px-14 lg:py-6">
         <!-- the container of logo and website name -->
         <div class="logo flex items-center" >
         <img src="./assets/logo.png" alt="website-log" class="w-12">
-        <h1 class="text-[#006747] font-black ml-3 text-xl ">Emergency <br> Service</h1>
+        <h1 class="text-[#006747] font-black ml-1 lg:ml-3 text-sm lg:text-xl ">Emergency <br> Service</h1>
         </div>
         <!-- the container of buttons -->
         <div class="flex space-x-2 lg:space-x-5 ">
-            <button class="btn btn-soft p-3 lg:px-6 lg:py-3 bg-[#41ff6b1a] rounded-[50px] font-black text-[16px] "><span id="heart-count">0</span> <img id="nav-heart" src="./assets/heart.png" alt="heart" class="w-6"></button>
+            <button class="btn btn-soft p-3 lg:px-6 lg:py-3 bg-[#41ff6b1a] rounded-[50px] font-black text-sm lg:text-[16px] "><span id="heart-count">0</span> <img id="nav-heart" src="./assets/heart.png" alt="heart" class="w-6"></button>
 
-            <button class="btn btn-soft p-3 lg:px-6 lg:py-3 bg-[#41ff6b1a] rounded-[50px] font-black text-[16px] "><span id="btn-coin">100</span><img src="./assets/coin.png" alt="coin" class="w-6"></button>
+            <button class="btn btn-soft p-3 lg:px-6 lg:py-3 bg-[#41ff6b1a] rounded-[50px] font-black text-sm lg:text-[16px] "><span id="btn-coin">100</span><img src="./assets/coin.png" alt="coin" class="w-6"></button>
 
-            <button class="btn btn-soft p-3 lg:px-9 lg:py-3 bg-[#00A63E] rounded-[50px]   text-white font-semibold text-[16px]"><span id="copy-count">0</span> Copy</button>
+            <button class="btn btn-soft p-3 lg:px-9 lg:py-3 bg-[#00A63E] rounded-[50px]   text-white font-semibold text-sm lg:text-[16px]"><span id="copy-count">0</span> Copy</button>
         </div>
        
     </header>
     <main class="bg-[#f5fff6]">
         <!-- hero banner section starts here -->
-         <section class="bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] h-[240px] hind-madurai-font px-14 py-4 ">
-            <div class="flex flex-col justify-center items-center ">
+         <section class="bg-gradient-to-r from-[#013223] via-[#006747] to-[#013223] min-h-[240px] hind-madurai-font px-14 py-4 ">
+            <div class="flex flex-col justify-center items-center text-center ">
                 <img src="./assets/logo-dark.png" alt="banner-image" class="w-24 ">
-                <h1 class="text-white text-3xl lg:text-4xl font-bold mt-5 ">Emergency Service Directory</h1>
-                <p class="text-white font-semibold text-sm text-center lg:text-xl mt-6">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
+                <h1 class="text-white text-3xl  lg:text-4xl font-bold mt-5 ">Emergency Service Directory</h1>
+                <p class="text-white font-semibold text-sm  lg:text-xl mt-6">Government Emergency Services at Your Fingertip – A Project by  Government of the People’s Republic of Bangladesh</p>
             </div>
 
          </section>
